Hide logo on narrow device, fix y overscroll

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   font-family: Verdana, Tahoma, sans-serif;
 }
 
+body {
+  overscroll-behavior-y: none;
+}
+
 button {
   border: none;
   background-color: none;
