--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -56,3 +56,9 @@
   font-size: 1.1rem;
   font-weight: bold;
 }
+
+@media screen and (max-width: 500px) {
+  .logo {
+    display: none;
+  }
+}
